# mtcli-macd

./: README.md  pyproject.toml
mtcli_macd/: macd.py
