[project]
name = "mtcli-macd"
version = "0.1.0"
description = "Plugin mtcli do indicador MACD"
authors = [
    {name = "Valmir França",email = "vfranca3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "mtcli",
    "pandas"
]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."mtcli.plugins"]
macd = "mtcli_macd.macd:macd"
